format ch7.md